--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -38,7 +38,7 @@ example     : '/js/example-basic.js'
     </div>
 </section>
 <section class="section">
-    <div class="container">
+    <div class="container container-full">
         <div class="row">
             <h2 class="section-title">Configuration</h2>
 
