--- a/examples/custom/index.html
+++ b/examples/custom/index.html
@@ -22,7 +22,7 @@ example     : '/js/example-custom.js'
     </div>
 </section>
 <section class="section">
-    <div class="container">
+    <div class="container container-full">
         <div class="row">
             <h2 class="section-title">Configuration</h2>
 
